
20160217:
	Solucionado bug xdev - 
	Frequencimetro de 10 cifras
	Squelch semifuncional - falta sincronizarlo con lo visual.

20160219
	Primera instancia de BUTONIFY con seleccion funcionando ok
	Mejora posición SQ
	MENU DEMODULADOR
	Nombre del demodulador sobre BW

20160220
	Calibrada escala de fondo 
	Ajustada escala de fondo al autozoom
	Calibrado SQ al autozoom (Ha sido infernal)

20160222
	Eliminado socket de FFT usando function probes. Reacción mucho más rápida.
	Eliminadas opciones de ventana del diagrama.

20160223
	Butonify: Modificado init para cambiar parametros, dibuja fondo de menu
	Butonify: A medias pintar menu con boton seleccionado

20160224
	Menu con opcion seleccionada
	Menu de demod sobre la linea de demodudlador

20160225
	Ajustado squelch a ojo
	Squelch cambia de color
	SMETER
	Cambiado interface: boton izquierdo mueve desviacion, derecho BW y menu
	MENU DEMOD
	RECORD con gran punto rojo parpadeante

20160227
	Flexibilizado audio rate, decimation, etc
	audiorate subido a 11025. Audio directo por pulseaudio, peta mucho menos
	Primeros amagos de LSB y USB
	Reorganizado código FFT
	Pulido puntos max y smeter
	GRABACION Y RECUPERACION DE ESTADIO (freq, modo,etc)

20160228
	Amago de FM W

20160302
	Menu principal y de FFT y botón de menú principal

20160303
	Inicio de cambio de botonera a Material Design 
	Animación en el despliegue de los menus

20160304
	Descubierto metodo para eliminar linea de DC. Pendiente hacerlo automático
	Reorganizacion esquema
	Paso a hardware de salida fijo sin pulseaudio. 
	Mejora FM
	FM STEREO

20160306
	Prueba para manejar el sonido con el pygame, sin exito
	Butonify cambiado a listas de diccionarios.
	Butonify nuevos tipos de botones: Switch.
	Cambiados todos los menus

20160307
	Creada zona inferior
	WATERFALL
	Inicio generalización zonas superior e inferior
	Menus actualizados a dos zonas. 

20160309
	AUTOSBASE
	Ajuste de dev con boton medio del raton

20160311
	USB y LSB funcionales. Falta ajustar visualización