@@ -1,9 +1,9 @@
-I126250000
-.F-51800.00000000033
-.F294.66666666666447
-.I2
-.S'USB'
+I446018999
+.I25650
+.I811
+.I1
+.S'FM N'
 p0
-.I-74
-.I200
+.I-99
+.I245
 .
